@@ -6,6 +6,7 @@ Jump Start Changelog
 
 * New: Added compatibility for [Nav Menu Roles](https://wordpress.org/plugins/nav-menu-roles) plugin.
 * Fixed: Banner Meta box display issue on Edit Page screen in admin.
+* Fixed: Top padding issues when combining a transparent header, page banner and custom layout all on the same page.
 
 --------------------------------------------------------------
 
